# AI_Chatbot_with_OpenAI_SDK_and_Chainlit

./: README.md
ai_chatbot/: pyproject.toml
ai_chatbot/src/ai_chatbot/: main.py
